data/derived/comb/progs/unify/prog8546.ml.out
Characters 144-155:
  | Sine sin		    -> Printf.printf ("sin( %s )" sin);
                                    ^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
